[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/BaseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/LevelMenu.gd" type="Script" id=2]

[node name="Screen" instance=ExtResource( 1 )]
script = ExtResource( 2 )
fade_in_time = 0.2

[node name="Logo" parent="Content" index="1"]
frame = 6

[node name="MarginContainer" parent="Content" index="2"]
margin_left = 192.0
margin_right = 287.0

[node name="LevelCode" type="Label" parent="Content/MarginContainer" index="0"]
margin_top = 191.0
margin_right = 95.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0.984314, 0.94902, 0.211765, 1 )
text = "Level code: 1234"

[node name="VBoxContainer" parent="Content/MarginContainer" index="1"]
margin_right = 95.0

[node name="Buttons" parent="Content/MarginContainer/VBoxContainer" index="0"]
margin_right = 95.0
margin_bottom = 48.0

[node name="ReturnToGame" type="Button" parent="Content/MarginContainer/VBoxContainer/Buttons" index="0"]
margin_right = 95.0
margin_bottom = 12.0
text = "Return to game"

[node name="Restart" type="Button" parent="Content/MarginContainer/VBoxContainer/Buttons" index="1"]
margin_top = 18.0
margin_right = 95.0
margin_bottom = 30.0
text = "Restart"

[node name="QuitToMain" type="Button" parent="Content/MarginContainer/VBoxContainer/Buttons" index="2"]
margin_top = 36.0
margin_right = 95.0
margin_bottom = 48.0
text = "Quit to main menu"

[node name="HButtons" parent="Content/MarginContainer/VBoxContainer" index="1"]
margin_top = 52.0
margin_right = 95.0
margin_bottom = 52.0

[connection signal="pressed" from="Content/MarginContainer/VBoxContainer/Buttons/ReturnToGame" to="." method="_on_ReturnToGame_pressed"]
[connection signal="pressed" from="Content/MarginContainer/VBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Content/MarginContainer/VBoxContainer/Buttons/QuitToMain" to="." method="_on_QuitToMain_pressed"]
